--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "@aurahelper/cli-manager",
   "productName": "Aura Helper CLI Manager",
   "displayName": "Aura Helper Framework CLI Manager",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "Module to handle Aura Helper CLI processes used in Aura Helper VSCode Extension",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "jest --coverage --runInBand"
+    "compile": "tsc -p ./ ",
+    "lint": "eslint src --ext ts",
+    "lint-fix": "eslint src --ext ts --fix",
+    "watch": "tsc -watch -p ./",
+    "test": "jest --coverage --runInBand",
+    "test-watch": "jest --coverage --runInBand --watch"
   },
   "keywords": [
     "aura-helper-framework",
@@ -48,11 +54,17 @@
     "email": "juanjoselongoria@gmail.com"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "jest": "^26.6.3"
+    "@types/jest": "^27.0.3",
+    "@types/node": "^12.12.47",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
+    "jest": "^27.4.3",
+    "ts-jest": "^27.0.7",
+    "typescript": "^3.9.6"
   },
   "dependencies": {
-    "@aurahelper/core": "^1.0.13",
-    "@aurahelper/metadata-factory": "^1.0.9"
+    "@aurahelper/core": "file:../ah-core",
+    "@aurahelper/metadata-factory": "file:../ah-metadata-factory"
   }
 }
