--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
-    "@aurahelper/core": "file:../ah-core",
-    "@aurahelper/metadata-factory": "file:../ah-metadata-factory"
+    "@aurahelper/core": "^2.0.0",
+    "@aurahelper/metadata-factory": "^2.0.0"
   }
 }
